<resources>
    <string name="app_name" translatable="false">MyExpense</string>
    <string name="login" translatable="false">Login</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="btn_login" translatable="false">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="btn_register" translatable="false">Register</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="last_name" translatable="false">Last name</string>
    <string name="email" translatable="false">Email</string>
    <string name="not_registered" translatable="false">Not registered yet?</string>
    <string name="registered" translatable="false">Already registered?</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="add_expense" translatable="false">Add expense</string>
    <string name="add_income" translatable="false">Add income</string>
    <string name="add_expense_name" translatable="false">Expense name</string>
    <string name="add_expense_type" translatable="false">Expense type</string>
    <string name="add_expense_amount" translatable="false">Expense amount</string>
    <string name="add_expense_entry_date" translatable="false">Entry date</string>
    <string name="add_income_name" translatable="false">Income name</string>
    <string name="add_income_type">Income type</string>
    <string name="add_income_amount">Income amount</string>
    <string name="add_income_entry_date">Entry date</string>
    <string name="btn_add">Add</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_show">Show</string>
    <string name="empty_expense">You have no entered expenses!</string>
    <string name="empty_income">You have no entered income!</string>
    <string name="expense_dialog_message">Are you sure you want to delete this expense?</string>
    <string name="income_dialog_message">Are you sure you want to delete this income?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expense_delete_text">Expense successfully deleted!</string>
    <string name="income_delete_text">Income successfully deleted!</string>
    <string name="balance_month">Balance month</string>
    <string name="balance_amount">Balance amount</string>
    <string name="balance_details">Balance details</string>

    <string-array name="expense_types">
        <item>Food</item>
        <item>Drinks</item>
        <item>Cigarettes</item>
        <item>Rent</item>
        <item>Going out</item>
        <item>Other</item>
    </string-array>

    <string-array name="income_types">
        <item>Pocket money</item>
        <item>Schoolarship</item>
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <string-array name="balance_for">
        <item>Expense</item>
        <item>Income</item>
    </string-array>

    <string name="month">Month</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">September</string>
</resources>
