<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="hr.tvz.android.expenseapp.LoginActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="36dp" />

    <EditText
        android:id="@+id/signup_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/signup_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/last_name" />
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_person"
        android:hint="@string/username" />
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_lock"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_register"
        android:onClick="registerUser"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered" />

        <TextView
            android:id="@+id/register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:paddingLeft="10dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/register_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>