<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textSize="42dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/add_income_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/add_income_name" />

    <EditText
        android:id="@+id/add_income_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/add_income_amount" />
    <Spinner
        android:id="@+id/incomeTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_incomeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income_entry_date"/>
    <TextView
        android:id="@+id/textIncomeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="28dp"/>

    <Button
        android:id="@+id/btn_add_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add"/>
    <TextView
        android:id="@+id/add_income_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>