<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textSize="42dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/add_expense_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/add_expense_name" />

    <EditText
        android:id="@+id/add_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/add_expense_amount" />
    <Spinner
        android:id="@+id/expenseTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_expenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_entry_date"/>
    <TextView
        android:id="@+id/textExpenseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="28dp"/>

    <Button
        android:id="@+id/btn_add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add"/>
    <TextView
        android:id="@+id/add_expense_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>